# django-inventory-management

./: db.sqlite3  pyproject.toml
auth_app/: forms.py  models.py  tests.py  urls.py  views.py
auth_app/static/styles/: styles.css
auth_app/templates/accounts/: login.html  logout.html  register.html
invApp/: admin.py  forms.py  models.py  urls.py  views.py
invApp/migrations/: 0001_initial.py
invApp/templates/invApp/: home.html  layout.html  product_confirm_delete.html  product_form.html  product_list.html
inventory/: settings.py  urls.py
templates/: 404.html
