[project]
name = "inventory-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "django-grappelli>=4.0.3",
    "django-jazzmin>=3.0.1",
    "django-unfold>=0.72.0",
]
